# oop_cpp

./: Books.h  CD.h  CMakeLists.txt  Location.cpp  Reader.h  Worker.cpp  main.cpp
src/: Books.cpp  CD.cpp  Items.cpp  Items.h  Location.cpp  Location.h  Magasine.cpp  Magasine.h  Reader.cpp  Worker.h  human.cpp  human.h  main.cpp
